# edge-core-hailo

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  OVERVIEW.md  README.md  TESTING.md  TODO.md  config.yaml  docker-compose.yml  nats-docker.conf  test_grpc.py  test_nats_subscribe.py
docs/: EVENT_COMPOSITOR_SPEC.md  MODEL_MANAGEMENT.md  POSE_MODEL_OPTIMIZATION.md
examples/frontend/: README.md  index.html
include/: batch_inference_manager.h  common.h  config.h  debug_utils.h  event_compositor.h  grpc_server.h  hailo_inference.h  interfaces.h  mock_components.h  model_registry.h  nats_publisher.h  stream_manager.h  stream_processor.h
proto/: detector.proto
scripts/: install_deps.sh
src/: batch_inference_manager.cpp  common.cpp  config.cpp  event_compositor.cpp  grpc_server.cpp  hailo_inference.cpp  main.cpp  model_registry.cpp  nats_publisher.cpp  stream_manager.cpp  stream_processor.cpp
tests/: test_common.cpp  test_integration.cpp  test_mock_components.cpp  test_nats_publisher.cpp  test_stream_manager.cpp
